--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./lib/server.ts"
+    "dev": "ts-node ./lib/server.ts --require dotenv/config"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
