--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.1",
     "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
