--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "sourceMap": true,
     "target": "es2017",
     "outDir": "./dist",
-    "baseUrl": "lib"
+    "baseUrl": "lib",
+    "experimentalDecorators": true,
+    "moduleResolution": "node"
   },
   "include": ["lib/**/*.ts"],
   "exclude": ["node_modules"]
