--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/jsonwebtoken": "^8.3.4"
   }
 }
