--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.19",
     "bcrypt": "^3.0.6",
@@ -17,6 +18,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.1",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
