--- a/package.json
+++ b/package.json
@@ -1,35 +1,52 @@
 {
-  "name": "updog-api2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "updogapi",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./lib/server.ts --require dotenv/config"
+    "build": "node ./util/build.js",
+    "lint": "tslint --project \"tsconfig.json\"",
+    "start": "cross-env ENV_FILE=production node -r ./env -r module-alias/register ./dist/start.js",
+    "start-dev": "nodemon --config \"./util/nodemon.json\"",
+    "test": "nodemon --config \"./util/nodemon.test.json\""
   },
-  "author": "",
-  "license": "ISC",
+  "_moduleAliases": {
+    "@daos": "dist/daos",
+    "@entities": "dist/entities",
+    "@shared": "dist/shared",
+    "@server": "dist/Server"
+  },
   "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.1",
-    "@types/mongoose": "^5.5.19",
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.10.1",
+    "@types/mongoose": "^5.5.22",
     "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
-    "envalid": "^5.0.0",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.3",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.3"
+    "http-status-codes": "^1.3.2",
+    "module-alias": "^2.2.2",
+    "mongodb": "^3.3.3",
+    "mongoose": "^5.7.5",
+    "morgan": "^1.9.1",
+    "tslib": "^1.10.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/jsonwebtoken": "^8.3.4"
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.1",
+    "@types/find": "^0.2.1",
+    "@types/jasmine": "^3.4.4",
+    "@types/jsonfile": "^5.0.0",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.11.1",
+    "@types/supertest": "^2.0.8",
+    "find": "^0.3.0",
+    "fs-extra": "^8.1.0",
+    "jasmine": "^3.5.0",
+    "jsonfile": "^5.0.0",
+    "nodemon": "^1.19.4",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.4"
   }
 }
