--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.5.22",
+    "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status-codes": "^1.3.2",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.5",
@@ -29,12 +31,14 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.1",
     "@types/find": "^0.2.1",
     "@types/jasmine": "^3.4.4",
     "@types/jsonfile": "^5.0.0",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.11.1",
     "@types/supertest": "^2.0.8",
