--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.5.22",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
