--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/mongoose": "^5.5.22",
     "bcrypt": "^3.0.6",
+    "cloudinary": "^1.16.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
